# utils

./: .clang-tidy  .dockercmd  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/bgf/ranges/: ranges.hpp
include/bgf/utils/: map.hpp  ranges.hpp  utils.hpp
include/bgf/utils/map/: ctmap.hpp
include/bgf/utils/ranges/: flat.hpp
include/ranges/: ranges.hpp
test/: CMakeLists.txt
test/map/: CMakeLists.txt
test/map/source/: map_test.cpp
test/ranges/: CMakeLists.txt
test/ranges/source/: ranges_test.cpp
test/source/: ranges_test.cpp
